# llm-learning

./: .env.example  .gitignore  README.md  WORKSPACE_SETUP.md  llm-learning.code-workspace  setup_workspace.sh
advanced_ai_agents/multi_agent_apps/deep-research-mini/: README.md  pyproject.toml
advanced_ai_agents/multi_agent_apps/deep-research-mini/src/agents/: __init__.py  researcher.py  supervisor.py
advanced_ai_agents/multi_agent_apps/deep-research-mini/src/prompts/templates/: planner.jinja-md  researcher.jinja-md  supervisor.jinja-md
advanced_ai_agents/multi_agent_apps/deep-research-mini/src/tools/: web_crawl.py
deep-research-mini/: langgraph.json  pyproject.toml
deep-research-mini/src/agents/: planner.py  run_agent.py
deep-research-mini/src/models/: __init__.py  chat_model.py
deep-research-mini/src/prompts/: __init__.py  template.py
deep-research-mini/src/tools/: __init__.py  web_search.py
rag_tutorials/rag_database_routing/: .env.example  DOUBAO_INTEGRATION.md  README.md  main.py  pyproject.toml  requirements.txt
rag_tutorials/rag_database_routing/src/: __init__.py  app.py  workflow.py
rag_tutorials/rag_database_routing/src/agents/: __init__.py  qa_agent.py  routing_agent.py
rag_tutorials/rag_database_routing/src/data/: __init__.py  collection_config.py
rag_tutorials/rag_database_routing/src/models/: __init__.py  chat_model.py  config.py  doubao_embeddings.py  embedding_model.py  llm_config.py
rag_tutorials/rag_database_routing/src/prompts/: __init__.py  routing_prompts.py
rag_tutorials/rag_database_routing/src/tools/: __init__.py  base_vector_store.py  document_processor.py  vector_store.py  web_search.py
rag_tutorials/rag_database_routing/test/: README.md  __init__.py  run_all_tests.py  test_agents.py  test_models.py  test_tools.py  test_workflow.py
starter_ai_agents/ai_travel_agent_langchain/: README.md  main.py  pyproject.toml  travel_agent_langchain.py
